...

      <Pressable
        onPress={handleDismiss}
        style={styles.closeButton}
        hitSlop={10}
        accessibilityRole="button"
        accessibilityLabel="Close player"
        testID="mini-player-close">
        <Feather
          name="x"
          size={18}
          color={Color(textColor).alpha(0.5).toString()}
        />
...
